# spitedb

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish-spitestack-cli.yml  release.yml
crates/spite-compiler/: Cargo.toml
crates/spite-compiler/runtime/: admin-ws.ts  admin.ts  app.ts  auth.ts  client.ts  email.ts  identity.ts  password-policy.ts  rate-limit.ts  security-headers.ts  sms.ts  social.ts  telemetry.ts  tenant.ts  totp.ts
crates/spite-compiler/src/: config.rs  lib.rs
crates/spite-compiler/src/codegen/: aggregate.rs  events.rs  handlers.rs  mod.rs  orchestrator.rs  project.rs  projection.rs  router.rs  runtime.rs  state.rs  ts_types.rs  validators.rs
crates/spite-compiler/src/diagnostic/: error.rs  mod.rs  span.rs
crates/spite-compiler/src/frontend/: mod.rs
crates/spite-compiler/src/frontend/typescript/: app_parser.rs  ast.rs  mod.rs  parser.rs  to_ir.rs
crates/spite-compiler/src/ir/: access.rs  aggregate.rs  mod.rs  orchestrator.rs  projection.rs
crates/spite-compiler/src/schema/: diff.rs  lock.rs  mod.rs  upcast.rs
crates/spite-compiler/src/validate/: mod.rs  purity.rs  structure.rs
crates/spitedb/: Cargo.toml  TELEMETRY_SPEC.md
crates/spitedb-napi/: Cargo.toml  index.d.ts  index.js  index.mjs  package.json
crates/spitedb-napi/js/: define.d.ts  define.d.ts.map  define.js  define.ts  proxy.d.ts  proxy.d.ts.map  proxy.js  proxy.ts  runner.ts  types.d.ts  types.d.ts.map  types.ts  worker.js  worker.ts
crates/spitedb-napi/scripts/: fix-types.js
crates/spitedb-napi/src/: lib.rs
crates/spitedb-napi/src/projection/: consumer.rs  instance.rs  mod.rs  operation.rs  registry.rs  schema.rs
crates/spitedb-napi/test/: projection.test.ts
crates/spitedb/src/: api.rs  codec.rs  crypto.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/spitedb/src/telemetry/: mod.rs  schema.rs  types.rs  writer.rs
crates/spitedb/tests/: corruption_detection_test.rs  telemetry_basic_test.rs
crates/spitestack-cli/: Cargo.toml
crates/spitestack-cli/src/: main.rs  ui.rs
crates/spitestack-cli/src/tui/: app.rs  audio.rs  commands.rs  event.rs  mod.rs  terminal.rs  theme.rs
crates/spitestack-cli/src/tui/capabilities/: detect.rs  mod.rs  sync.rs  tier.rs
crates/spitestack-cli/src/tui/render/: animation.rs  braille.rs  gradients.rs  mod.rs
crates/spitestack-cli/src/tui/widgets/: dashboard.rs  errors.rs  input.rs  mod.rs  music.rs  output.rs  splash.rs  status.rs  vinyl.rs  vu_meter.rs
spitedb-napi/: Cargo.toml  index.d.ts  package.json
spitedb-napi/js/: index.d.ts  index.d.ts.map  index.js  index.ts  runner.d.ts  runner.d.ts.map  runner.js  runner.ts
spitedb-napi/src/: lib.rs
spitedb-napi/src/projection/: consumer.rs  mod.rs  registry.rs
src/: api.rs  codec.rs  lib.rs  reader.rs  schema.rs  subscription.rs  tombstones.rs  types.rs  writer.rs
